refactor(stream): 替换Collectors.toList()为toList()方法
- 优化代码简洁性，使用Java 16引入的Stream.toList()替代Collectors.toList()
- 统一代码风格，减少冗余代码
- 提升代码可读性，简化stream操作