@@ -14,7 +14,6 @@ import java.io.File;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 本地文件读取模式
@@ -47,7 +46,7 @@ public class LocalFileTemplate implements FileTemplate {
 		return Arrays.stream(FileUtil.ls(properties.getLocal().getBasePath()))
 			.filter(FileUtil::isDirectory)
 			.map(dir -> new Bucket(dir.getName()))
-			.collect(Collectors.toList());
+                .toList();
 	}
 
 	/**
@@ -167,7 +166,7 @@ public class LocalFileTemplate implements FileTemplate {
 			S3ObjectSummary summary = new S3ObjectSummary();
 			summary.setKey(file.getName());
 			return summary;
-		}).collect(Collectors.toList());
+        }).toList();
 	}
 
 }
