@@ -8,7 +8,6 @@ import lombok.experimental.UtilityClass;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @UtilityClass
 public class DataUtil {
@@ -49,7 +48,7 @@ public class DataUtil {
 
 		List<SysDept> collect = allDeptList.stream()
 			.filter(w -> w.getParentId() == deptId)
-			.collect(Collectors.toList());
+                .toList();
 
 		if (CollUtil.isEmpty(collect)) {
 			return list;
@@ -75,7 +74,7 @@ public class DataUtil {
 
 		List<SysMenu> collect = allMenuList.stream()
 			.filter(w -> w.getParentId() == menuId)
-			.collect(Collectors.toList());
+                .toList();
 		if (CollUtil.isEmpty(collect)) {
 			return list;
 		}
